changed the path I made a silly mistake in the midnight

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <!-- <link rel="stylesheet" href="../css/style.css"> -->
-        <!-- <link rel="stylesheet" href="../css/retro.css"> -->
-        <link rel="stylesheet" href="/noob.org/css/style.css">
-        <link rel="stylesheet" href="/noob.org/css/retro.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/retro.css">
         <title>Noob.org</title>
     </head>
     <body>
