--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">Resume</a></li>
-        <li><a href="#home">Writings</a></li>
+        <!--<li><a href="#home">Writings</a></li>-->
+        <li><a href="./writings.html">Writings</a></li>
         <li><a href="#home">100</a></li>
         <li><a href="#home">[New Plan]</a></li>
+        <li><a href="posts/resources.html">[Learning Resources]</a></li>
     </ul>
 </nav>
     </body>
