--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav>
     <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="#about">Resume</a></li>
+        <li><a href="resume.html">Resume</a></li>
         <!--<li><a href="#home">Writings</a></li>-->
         <li><a href="./writings.html">Writings</a></li>
         <li><a href="#home">100</a></li>
