--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <nav>
     <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="resume.html">Resume</a></li>
+        <li><a href="posts/resume.html">Resume</a></li>
         <!--<li><a href="#home">Writings</a></li>-->
-        <li><a href="./writings.html">Writings</a></li>
+        <li><a href="posts/writings.html">Writings</a></li>
         <li><a href="#home">100</a></li>
         <li><a href="#home">[New Plan]</a></li>
         <li><a href="posts/resources.html">[Learning Resources]</a></li>
